# schedule

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.rst  TODO.md  TODO.txt  example.txt  example.yml  pdfschedule.py  pdfschedule.rst  pyproject.toml  schedule.pl  schedule.pod  schedule.py  setup.cfg  setup.py  tox.ini
examples/: Makefile  example01.yml
src/: pdfschedule.py
