[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pdfschedule"
dynamic = ["version"]
description = "Weekly schedule typesetter"
readme = "README.rst"
requires-python = ">=3.8"
license = "MIT"
license-files = { paths = ["LICENSE"] }
authors = [
    { name = "John Thorvald Wodder II", email = "pdfschedule@varonathe.org" }
]

keywords = [
    "pdf",
    "schedule",
    "week",
]

classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Printing",
]

dependencies = [
    "attrs     >= 18.2",
    "click     >= 7.0",
    "PyYAML    >= 5.0, < 7.0",
    "reportlab ~= 3.4",
]

[project.scripts]
pdfschedule = "pdfschedule:main"

[project.urls]
"Source Code" = "https://github.com/jwodder/schedule"
"Bug Tracker" = "https://github.com/jwodder/schedule/issues"

[tool.hatch.version]
path = "pdfschedule.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docs",
    "/examples",
    "/pdfschedule.py",
    "/test",
    "CHANGELOG.*",
    "CONTRIBUTORS.*",
    "tox.ini",
]

[tool.hatch.envs.default]
python = "3"
