[aliases]
make = sdist bdist_wheel

[metadata]
name = pdfschedule
#version = # Set in setup.py
description = Weekly schedule typesetter
long_description = file:README.rst
author = John Thorvald Wodder II
author_email = pdfschedule@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/schedule

keywords =
    ###

classifiers =
    Development Status :: 3 - Alpha
    #Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    ###

[options]
py_modules = pdfschedule
python_requires = ~=3.3
install_requires =
    attrs     ~= 17.1
    click     ~= 6.5
    reportlab ~= 3.4

[options.entry_points]
console_scripts =
    pdfschedule = pdfschedule:main
