[aliases]
make = sdist bdist_wheel

[metadata]
name = pdfschedule
#version = # Set in setup.py
description = Weekly schedule typesetter
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = pdfschedule@varonathe.org
license = MIT
license_file = LICENSE
url = https://github.com/jwodder/schedule

keywords =
    pdf
    schedule
    week

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Environment :: Console
    Intended Audience :: End Users/Desktop
    Topic :: Office/Business :: Scheduling
    Topic :: Printing

project_urls =
    Source Code = https://github.com/jwodder/schedule
    Bug Tracker = https://github.com/jwodder/schedule/issues
    Say Thanks! = https://saythanks.io/to/jwodder

[options]
py_modules = pdfschedule
python_requires = ~=3.4
install_requires =
    attrs     ~= 18.2
    click     ~= 7.0
    PyYAML    == 5.*
    reportlab ~= 3.4

[options.entry_points]
console_scripts =
    pdfschedule = pdfschedule:main
